--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "verstka",
   "version": "0.1.0",
+  "homepage": "http://RostTrukhum.github.io/antage-ui",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
